--- a/index.html
+++ b/index.html
@@ -59,34 +59,63 @@
     // GraphQL API Endpoint
     const GRAPHQL_URL = "https://curious-moccasin-87.hasura.app/v1/graphql";
 
-    // Fetch Service History
-    async function fetchServiceHistory() {
-      const response = await fetch(GRAPHQL_URL, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          query: `
-            query GetHistoryList {
-              history {
-                _id
-                date
-                status
+    function getOneMonthAgoFormatted() {
+    const oneMonthAgo = new Date();
+    oneMonthAgo.setMonth(oneMonthAgo.getMonth() - 1);
+    const day = oneMonthAgo.getDate().toString().padStart(2, '0');
+    const month = (oneMonthAgo.getMonth() + 1).toString().padStart(2, '0');
+    const year = oneMonthAgo.getFullYear();
+    return `${day}/${month}/${year}`;
+  }
+
+  // Fetch Service History (1개월 전 데이터부터 조회하며, status에 "✅" 또는 "⚠️"가 포함된 항목은 제외)
+  async function fetchServiceHistory() {
+    const fromDateFormatted = getOneMonthAgoFormatted();
+
+    const response = await fetch(GRAPHQL_URL, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+        query: `
+          query GetHistoryList($from_date: string!) {
+            history(
+              where: { 
+                date: { _gt: $from_date },
               }
+            ) {
+              _id
+              date
+              status
             }
-          `,
-        }),
-      });
-      const result = await response.json();
-      const serviceHistoryElement = document.getElementById("service-history");
-      serviceHistoryElement.innerHTML = "";
-      result.data.history.forEach((item) => {
+          }
+        `,
+        variables: {
+          from_date: fromDateFormatted
+        }
+      }),
+    });
+
+    const result = await response.json();
+    console.log("History", result);
+    
+    const serviceHistoryElement = document.getElementById("service-history");
+    const filteredHistory = result.data.history.filter(item => {
+      return !item.status.includes("✅") && !item.status.includes("⚠️");
+    });
+    
+    serviceHistoryElement.innerHTML = "";
+    if (filteredHistory.length > 0) {
+      filteredHistory.forEach(item => {
         const listItem = document.createElement("li");
         listItem.textContent = `${item.date}: ${item.status}`;
         serviceHistoryElement.appendChild(listItem);
       });
+    } else {
+      serviceHistoryElement.innerHTML = "<li>There has been no service downtime in the past 30 days.</li>";
     }
+  }
 
     // Fetch Event List
     async function fetchEventList() {
